--- a/GUI/MainWindow.ui
+++ b/GUI/MainWindow.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../video4fuze.qrc">
-    <normaloff>:/icons/Sansa_Fuze_Icon_Pack_by_benbrooks/Blue/Charging/fuze_fullsize.png</normaloff>:/icons/Sansa_Fuze_Icon_Pack_by_benbrooks/Blue/Charging/fuze_fullsize.png</iconset>
+    <normaloff>:/icons/blue.png</normaloff>:/icons/blue.png</iconset>
   </property>
   <property name="locale">
    <locale language="C" country="AnyCountry"/>
@@ -54,9 +54,6 @@
     <property name="showGrid">
      <bool>false</bool>
     </property>
-    <attribute name="horizontalHeaderStretchLastSection">
-     <bool>true</bool>
-    </attribute>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
     </attribute>
@@ -160,7 +157,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../video4fuze.qrc">:/icons/Sansa_Fuze_Icon_Pack_by_benbrooks/Black/Charging/fuze_fullsize.png</pixmap>
+     <pixmap resource="../video4fuze.qrc">:/icons/black.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
